# orchestra

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  GEMINI.md  commit_message.txt  create_test_data.py  create_test_data.py.lprof  db.sqlite3  full_server_log.txt  main.py  manage.py  populate_db.py.lprof  progress.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
apps/analise_infracoes/: __init__.py  admin.py  apps.py  models.py  progress.md  urls.py  views.py
apps/analise_infracoes/management/commands/: __init__.py  sincronizar_infracoes.py
apps/analise_infracoes/migrations/: 0001_initial.py
apps/analise_infracoes/templates/analise_infracoes/: listar_infracoes.html
apps/automacao_documentos/: GEMINI.md  admin.py  apps.py  models.py  progress.md  tests.py  urls.py
apps/automacao_documentos/management/commands/: automacao_documentos_ipiranga.py  cleanup_automation_data.py  login_portran.py  upload_licenca.py
apps/automacao_documentos/migrations/: 0001_initial.py  0002_alter_documento_id.py  0002_automacao_portal_logexecucaoautomacao_and_more.py  0003_remove_portal_senha.py
apps/automacao_ibama/: GEMINI.md  apps.py  progress.md
apps/automacao_ibama/management/commands/: process_portran_vehicles.py  upload_licenca.py
apps/automacao_ibama/migrations/: 0001_initial.py
apps/automacao_ipiranga/: GEMINI.md  __init__.py  admin.py  apps.py  models.py  progress.md  signals.py  tasks.py  tests.py  urls.py  views.py
apps/automacao_ipiranga/management/commands/: automacao_documentos_ipiranga.py  cleanup_media.py  cleanup_test_data.py  reset_automation_sequences.py  test_ocr_extraction.py
apps/automacao_ipiranga/migrations/: 0001_initial.py  0002_alter_certificadoveiculo_arquivo.py  0002_alter_veiculoipiranga_renavam_and_more.py  0002_certificadoveiculo.py  0002_certificadoveiculo_tentativas_automacao_and_more.py  0003_alter_certificadoveiculo_arquivo.py  0003_certificadoveiculo_tentativas_automacao_and_more.py  0003_remove_veiculoipiranga_renavam.py  0004_remove_certificadoveiculo_tentativas_ocr.py
apps/common/: admin.py  apps.py  progress.md  services.py  storage.py  views.py
apps/dashboard/: admin.py  apps.py  progress.md  tests.py  urls.py  views.py
apps/dashboard/templates/dashboard/: orchestra.html
core/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: populate_db.py  run_safety.py
