[project]
name = "orchestra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "line-profiler>=5.0.0",
    "playwright>=1.54.0",
    "pymupdf>=1.26.3",
    "pyright>=1.1.403",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
    "htmlcov",
    "media",
    "logs",
    ".direnv",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
    "env",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "A", "C4", "SIM", "ISC", "ICN", "TID", "ERA", "RUF", "DJ"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start on the second line
    "D401", # First line should be in imperative mood
    "D417", # Missing argument descriptions in the docstring
    "E501", # Line too long (handled by formatter)
    "F401", # Unused import (handled by ruff --fix)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["apps", "core"]
known-local-folder = []
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = "test_*.py *_test.py tests.py"

[tool.coverage.run]
branch = true
source = ["core", "apps"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
ignore_errors = true
show_missing = true

[dependency-groups]
dev = [
    "decouple-types>=1.0.2",
    "django-debug-toolbar>=6.0.0",
    "django-stubs>=5.2.2",
    "line-profiler>=5.0.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "ruff>=0.12.5",
    "safety>=3.6.0",
]
