[project]
name = "orchestra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "mysqlclient>=2.2.7",
    "playwright==1.54.0",
    "psycopg2-binary>=2.9.10",
    "pyright>=1.1.403",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "filelock>=3.16.1",
    "psutil>=6.1.1",
    "pydantic>=2.9.2",
    "pydantic-core>=2.23.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
    "htmlcov",
    "media",
    "logs",
    ".direnv",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    "env",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "A", "C4", "SIM", "ISC", "ICN", "TID", "ERA", "RUF", "DJ", "PL", "C90", "ANN", "ASYNC", "PERF", "PIE", "NPY"]
ignore = [
    "E501", # Line too long (handled by formatter)
    "F401", # Unused import (handled by ruff --fix)
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start on the second line
    "D401", # First line should be in imperative mood
    "D417", # Missing argument descriptions in the docstring
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "C901", # Function is too complex
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["apps", "core"]
known-local-folder = []
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "decouple-types>=1.0.2",
    "django-debug-toolbar>=6.0.0",
    "django-stubs>=5.2.2",
    "line-profiler==5.0.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "ruff>=0.12.5",
    "safety>=3.6.0",
    "snakeviz>=2.2.2",
    "scipy-stubs",
]
all = [
    "django>=5.2.4",
    "line-profiler==5.0.0",
    "mysqlclient>=2.2.7",
    "playwright==1.54.0",
    "psycopg2-binary>=2.9.10",
    "pyright>=1.1.403",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "decouple-types>=1.0.2",
    "django-debug-toolbar>=6.0.0",
    "django-stubs>=5.2.2",
    "pre-commit>=4.2.0",
    "safety>=3.6.0",
    "snakeviz>=2.2.2",
]
